<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <Preference
        android:key="config_delay_time"
        android:title="设置延时" />


    <Preference
        android:key="config_battery_optimizations"
        android:title="@string/disable_battery_opt_title"
        android:summary="允许 watchman 熄屏后保持运行"/>

    <PreferenceCategory android:title="视频监控">
        <Preference
            android:key="config_video_length"
            android:title="设置视频监控长度" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/video_active_preference_key"
            android:title="视频监控"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sensors">

        <ListPreference
            android:entries="@array/camera"
            android:entryValues="@array/camera_alias"
            android:key="camera"
            android:summary="%s"
            android:title="选择摄像头" />

        <Preference
            android:key="camera_sensitivity"
            android:title="相机敏感度" />

        <Preference
            android:key="config_sound"
            android:title="声音敏感度" />

        <Preference
            android:key="config_movement"
            android:title="运动敏感度" />


    </PreferenceCategory>
    <PreferenceCategory android:title="通知">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="email_active"
            android:title="使用email发送警告" />

        <EditTextPreference
            style="@style/AppPreference.DialogPreferenceSave"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="请输入接收警告的邮件"
            android:key="remail_username"
            android:summary="请输入接收警告的邮件"
            android:title="收邮件邮箱" />

        <EditTextPreference
            style="@style/AppPreference.DialogPreferenceRegister"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="请输入发送警告的邮箱(目前只支持163邮箱)"
            android:key="email_username"
            android:summary="发送方邮箱"
            android:title="发送方邮箱地址" />

        <EditTextPreference
            style="@style/AppPreference.DialogPreferenceRegister"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="请输入发送邮箱POP授权码"
            android:key="email_password"
            android:summary="POP授权码"
            android:title="请输入POP3授权码" />

        <EditTextPreference
            style="@style/AppPreference.DialogPreferenceSave"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="@string/notification_time_dialog"
            android:inputType="number"
            android:key="notification_time"
            android:summary="输入时间（分钟）以限制通知，输入0则会发送所有通知"
            android:title="通知间隔"
            />


        <!--<SwitchPreferenceCompat-->
            <!--android:defaultValue="true"-->
            <!--android:key="sms_active"-->
            <!--android:title="@string/sms_label" />-->

        <!--<EditTextPreference-->
            <!--style="@style/AppPreference.DialogPreferenceSave"-->
            <!--android:dialogLayout="@layout/pref_dialog_edit_text_hint"-->
            <!--android:dialogMessage="@string/sms_dialog_message"-->
            <!--android:inputType="phone"-->
            <!--android:key="sms_number"-->
            <!--android:summary="@string/sms_dialog_summary"-->
            <!--android:title="@string/phone_number" />-->

        <!--<EditTextPreference-->
            <!--style="@style/AppPreference.DialogPreferenceRegister"-->
            <!--android:dialogLayout="@layout/pref_dialog_edit_text_hint"-->
            <!--android:dialogMessage="@string/register_signal_desc"-->
            <!--android:inputType="phone"-->
            <!--android:key="register_signal"-->
            <!--android:summary="@string/signal_dialog_summary"-->
            <!--android:title="@string/signal_number" />-->

        <!--<EditTextPreference-->
            <!--style="@style/AppPreference.DialogPreferenceVerify"-->
            <!--android:dialogLayout="@layout/pref_dialog_edit_text"-->
            <!--android:dialogMessage="@string/enter_verification"-->
            <!--android:inputType="number"-->
            <!--android:key="verify_signal"-->
            <!--android:summary="@string/verification_dialog_summary"-->
            <!--android:title="@string/verify_signal" />-->

        <!--<EditTextPreference-->
            <!--style="@style/AppPreference.DialogPreferenceSave"-->
            <!--android:dialogLayout="@layout/pref_dialog_edit_text"-->
            <!--android:dialogMessage="@string/notification_time_dialog"-->
            <!--android:inputType="number"-->
            <!--android:key="notification_time"-->
            <!--android:summary="@string/notification_time_summary"-->
            <!--android:title="@string/notification_time"-->
            <!--/>-->


    </PreferenceCategory>

    <PreferenceCategory android:title="远程访问">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="ftp_active"
            android:title="使用ftp上传监测到的图片等文件" />

        <EditTextPreference
            style="@style/AppPreference.DialogPreferenceSave"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="请输入ftp服务器地址如：public.sjtu.edu.cn"
            android:key="ftp_url"
            android:summary="请输入ftp服务器的地址"
            android:title="ftp 地址" />

        <EditTextPreference
            style="@style/AppPreference.DialogPreferenceRegister"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="请输入发送ftp账号"
            android:key="ftp_account"
            android:summary="ftp 账号"
            android:title="ftp 上传账号" />

        <EditTextPreference
            style="@style/AppPreference.DialogPreferenceRegister"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="请输入ftp账号对应的密码"
            android:key="ftp_password"
            android:summary="ftp 密码"
            android:title="请输入ftp 密码" />

        <EditTextPreference
            style="@style/AppPreference.DialogPreferenceSave"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="输入时间 (s) 以限制上传, 输入 \'0\' 则会所有都上传"
            android:inputType="number"
            android:key="ftp_upload_time"
            android:summary="请设置ftp 上传的时间间隔"
            android:title="ftp 上传时间间隔"
            />
    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/remote_access">-->

        <!--<SwitchPreferenceCompat-->
            <!--android:defaultValue="false"-->
            <!--android:key="remote_access_active"-->
            <!--android:summary="@string/remote_access_label"-->
            <!--android:title="@string/remote_access" />-->

        <!--<EditTextPreference-->
            <!--android:dialogLayout="@layout/pref_dialog_edit_text"-->
            <!--android:dialogMessage="@string/remote_access_hint"-->
            <!--android:key="remote_access_onion"-->
            <!--android:summary="@string/remote_access_hint"-->
            <!--android:title="@string/service_address" />-->

        <!--<EditTextPreference-->
            <!--android:dialogLayout="@layout/pref_dialog_edit_password"-->
            <!--android:dialogMessage="@string/remote_access_credential_hint"-->
            <!--android:inputType="textPassword"-->
            <!--android:key="remote_access_credential"-->
            <!--android:summary="@string/remote_access_credential_hint"-->
            <!--android:title="@string/password" />-->
    <!--</PreferenceCategory>-->

</PreferenceScreen>